--- a/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
+++ b/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
@@ -5,10 +5,12 @@
     <title>Рецепты</title>
 </head>
 <body>
+<p>Состав рецепта {{ recipe_name }}:</p>
 {% for ingredient, amount in recipe.items %}
     <p>{{ ingredient }}: {{ amount }}</p>
 {% empty %}
     <p>Такого рецепта не знаю :(</p>
+    <p>{{ msg }}</p>
 {% endfor %}
 </body>
 </html>
